Header do card criado

--- a/index.html
+++ b/index.html
@@ -14,7 +14,31 @@
     <title>Dgley Ramos - Links</title>
 </head>
 <body>
-    
+    <section class="container">
+        <div class="card">
+            <div class="card-head">
+                <div class="box-img">
+                    <img class="imagem" src="./assets/src/images/perfil.jpg" alt="Imagem de perfil">
+                </div>
+                <div class="title">
+                    <h1>Dgley Ramos</h1>
+                    <h4>Desenvolvedor web full-stack</h4>
+                </div>
+                <div class="icons">
+                    <a href="https://github.com/dgleyramos1" target="_blank">
+                        <i class="fab fa-github-square"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/dgleyramos/" target="_blank">
+                        <i class="fab fa-linkedin"></i> 
+                    </a>
+                    <a href="https://www.instagram.com/dgleyramos/" target="_blank">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="card-body"></div>
+        </div>
+    </section>
 
     <!--Javascript-->
     <script src="./assets/src/js/script.js"></script>
