body do card criado

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./assets/src/css/style.css">
 
      <!-- Font Awesome -->
-     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <title>Dgley Ramos - Links</title>
 </head>
@@ -36,7 +36,76 @@
                     </a>
                 </div>
             </div>
-            <div class="card-body"></div>
+            <div class="card-body">
+                <div class="box-city">
+                    <div class="location">
+                        <h4>
+                            <i class="fa fa-location-arrow"></i>
+                            Location:
+                        </h4>
+                        <p>Catolé do Rocha-PB</p>
+                    </div>
+                    <div class="curriculo">
+                        <a class="btn" href="./assets/src/pdf/curriculo.pdf" download="Dgley-Ramos-CV">
+                            Download CV
+                            <i class="fas fa-download"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="biografia">
+                    <h4>
+                        <i class="fa fa-book"></i>
+                        Biografia:
+                    </h4>
+                    <p>
+                        Hello, I'm 28 years old, I'm from Paraíba, I like football, music, ufology, anime and series. I am communicative, patient, work under pressure, have knowledge in html, css, bootstrap, javascript, react, vetx.io, java, springboot, mysql, postgresql. My knowledge is still little, but I am willing to learn, I am focused and determined.
+                    </p>
+                </div>
+                <div class="skills">
+                    <h4>
+                        <i class="far fa-address-book"></i>
+                        Hard Skills:
+                    </h4>
+                    <ul>
+                        <li id="html">
+                            <i class="fab fa-html5"></i>
+                            HTML
+                        </li>
+                        <li id="css">
+                            <i class="fab fa-css3-alt"></i>
+                            CSS
+                        </li>
+                        <li id="bootstrap">
+                            <i class="fab fa-bootstrap"></i>
+                            BOOTSTRAP
+                        </li>
+                        <li id="javascript">
+                            <i class="fab fa-js"></i>
+                            JAVASCRIPT
+                        </li>
+                        <li id="react">
+                            <i class="fab fa-react"></i>
+                            REACT
+                        </li>
+                        <li id="vetx">
+                            VETX.IO
+                        </li>
+                        <li id="postgresql">
+                            POSTGRESQL
+                        </li>
+                        <li id="mysql">
+                            MYSQL
+                        </li>
+                        <li id="spring">
+                            SPRING-BOOT
+                        </li>
+                        <li id="java">
+                            <i class="fab fa-java"></i>
+                            JAVA
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </section>
 
