Deixando o card responsivo

--- a/index.html
+++ b/index.html
@@ -20,20 +20,22 @@
                 <div class="box-img">
                     <img class="imagem" src="./assets/src/images/perfil.jpg" alt="Imagem de perfil">
                 </div>
-                <div class="title">
-                    <h1>Dgley Ramos</h1>
-                    <h4>Desenvolvedor web full-stack</h4>
-                </div>
-                <div class="icons">
-                    <a href="https://github.com/dgleyramos1" target="_blank">
-                        <i class="fab fa-github-square"></i>
-                    </a>
-                    <a href="https://www.linkedin.com/in/dgleyramos/" target="_blank">
-                        <i class="fab fa-linkedin"></i> 
-                    </a>
-                    <a href="https://www.instagram.com/dgleyramos/" target="_blank">
-                        <i class="fab fa-instagram"></i>
-                    </a>
+                <div class="box-header">
+                    <div class="title">
+                        <h1>Dgley Ramos</h1>
+                        <h4>Desenvolvedor web full-stack</h4>
+                    </div>
+                    <div class="icons">
+                        <a href="https://github.com/dgleyramos1" target="_blank">
+                            <i class="fab fa-github-square"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/dgleyramos/" target="_blank">
+                            <i class="fab fa-linkedin"></i> 
+                        </a>
+                        <a href="https://www.instagram.com/dgleyramos/" target="_blank">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="card-body">
