--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="box-header">
                     <div class="title">
                         <h1>Dgley Ramos</h1>
-                        <h4>Desenvolvedor web full-stack</h4>
+                        <h4>Developer web full-stack</h4>
                     </div>
                     <div class="icons">
                         <a href="https://github.com/dgleyramos1" target="_blank">
@@ -57,7 +57,7 @@
                 <div class="biografia">
                     <h4>
                         <i class="fa fa-book"></i>
-                        Biografia:
+                        Biography:
                     </h4>
                     <p>
                         Hello, I'm 28 years old, I'm from Paraíba, I like football, music, ufology, anime and series. I am communicative, patient, work under pressure, have knowledge in html, css, bootstrap, javascript, react, vetx.io, java, springboot, mysql, postgresql. My knowledge is still little, but I am willing to learn, I am focused and determined.
